syntax = "proto3";
option go_package = "github.com/oasislabs/ekiden/go/grpc/beacon";

// Beacon protocol definitions.

package beacon;

service Beacon {
    rpc GetBeacon (BeaconRequest) returns (BeaconResponse) {}
    rpc WatchBeacons (WatchBeaconRequest) returns (stream WatchBeaconResponse) {}
}

message BeaconRequest {
    uint64 epoch = 1;
}

message BeaconResponse {
    bytes beacon = 1;
}

message WatchBeaconRequest {

}

message WatchBeaconResponse {
    uint64 epoch = 1;
    bytes beacon = 2;
}
